--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
+    background-color: #f4ff00;
+    margin: 3;
+    padding: 3;
 }
 
 h1 {
