--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
-/* Mengatur latar belakang laman */
 body {
-    background-color: ivory; /* Warna putih gading */
+    background-color: ivory; 
     font-family: "Times New Roman", Times, serif;
-    color: black; /* Warna font hitam */
-    text-align: center; /* Posisi teks di tengah */
+    color: black; 
+    text-align: center; 
     margin: 0;
     padding: 0;
 }
 
-/* Mengatur warna heading title (h1, h2, dst.) */
+
 h1, h2, h3, h4, h5, h6 {
-    color: emerald; /* Warna emerald */
+    color: emerald; 
 }
