--- a/style.css
+++ b/style.css
@@ -140,7 +140,30 @@ p, label, li, span, input::placeholder, textarea::placeholder {
 .container a:hover {
     color: #731210; /* Warna maroon saat kursor diarahkan */
 }
+.container {
+    text-align: left;
+}
 
+.container form {
+    display: block;
+}
+/* Sembunyikan form awalnya */
+.form-container {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #f8e6d1;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Tampilkan form saat dihover */
+.trigger:hover + .form-container {
+    display: block;
+}
 footer {
     background-color: #4e0d0b;
     color: #f8e6d1;
