--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 /* Reset dasar */
 body {
-    font-family: "Times New Roman", Times, serif;
+    font-family: "Times New Roman", Times;
     background-color: #731210; /* Warna maroon */
     color: white;
     text-align: center;
