--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-family: "Times New Roman", Times;
     background-color: #731210; /* Warna maroon */
     color: white;
-    text-align: center;
+    text-align: justify;
     margin: 30;
     padding: 20;
 }
