--- a/style.css
+++ b/style.css
@@ -168,6 +168,30 @@ p {
 .trigger:hover + .form-container {
     display: block;
 }
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.modal-content {
+    background-color: white;
+    margin: 10% auto;
+    padding: 20px;
+    width: 50%;
+    border-radius: 8px;
+}
+
+.close {
+    float: right;
+    font-size: 28px;
+    cursor: pointer;
+}
 footer {
     background-color: #4e0d0b;
     color: #f8e6d1;
