--- a/style.css
+++ b/style.css
@@ -201,7 +201,10 @@ table td:hover {
     background-color: #e6c7a6; 
     color: black;
 }
-
+.logo-gif {
+    width: 80px;  /* Sesuaikan ukuran gambar */
+    height: auto;
+}
 footer {
     background-color: #4e0d0b;
     color: #f8e6d1;
