--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ table td:hover {
 }
 
 .logo-gif {
-    width: 50px; /* Sesuaikan ukuran */
+    width: 70px; 
     height: auto;
     position: absolute;
     top: 10px;
