--- a/style.css
+++ b/style.css
@@ -239,20 +239,17 @@ table th:hover {
     color: white;
 }
 
-table td {
-    border: 2px solid black;
-    padding: 12px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
 table {
     width: 90%; /* Perbesar tabel agar lebih lebar */
     margin: 20px auto; /* Tengahkan tabel */
     border-collapse: collapse; /* Hilangkan jarak antar border */
 }
 
-td, th {
+table td, table th {
+    border: 2px solid black;
     padding: 15px; /* Tambahkan padding agar teks lebih nyaman dibaca */
     font-size: 18px; /* Perbesar ukuran teks agar lebih jelas */
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 table td:hover {
