--- a/style.css
+++ b/style.css
@@ -251,17 +251,10 @@ table td:hover {
     left: 10px;
 }
 
-.book body {
-    font-family: Arial, sans-serif;
-    background-color: #f8e6d1;
-    margin: 0;
-    padding: 0;
-}
-
-.book-container {
-    max-width: 1200px;
-    margin: auto;
+.halaman-koleksi .container {
+    background-color: #fce5cd; /* Warna cream */
     padding: 20px;
+    border-radius: 10px;
 }
 
 h2 {
