--- a/style.css
+++ b/style.css
@@ -122,12 +122,13 @@ form {
 
 input, textarea {
     font-family: inherit;
-    font-size: 16px;
-    padding: 8px;
-    border: 1px solid #731210;
+    width: 100%; 
+    padding: 10px;
+    border: 1px solid #731210; 
     border-radius: 5px;
-    width: 100%;
-    box-sizing: border-box;
+    font-size: 16px;
+    background-color: #f8e6d1; 
+    color: #731210; 
 }
 
 input:focus, textarea:focus {
