--- a/style.css
+++ b/style.css
@@ -117,7 +117,6 @@ a:hover {
 form {
     width: 80%; 
     max-width: 600px; 
-    margin-bottom: 15px;
 }
 
 input, textarea {
@@ -129,13 +128,16 @@ input, textarea {
     font-size: 16px;
     background-color: #f8e6d1; 
     color: #731210; 
-    margin-bottom: 15px;
 }
 
 input:focus, textarea:focus {
     border-color: #A52A2A; 
     outline: none;
     box-shadow: 0px 0px 5px rgba(165, 42, 42, 0.5);
+}
+
+label {
+    margin-bottom: 5px; /* Menambah jarak antara label dan input */
 }
 
 button {
