--- a/style.css
+++ b/style.css
@@ -128,6 +128,9 @@ input, textarea {
     font-size: 16px;
     background-color: #f8e6d1; 
     color: #731210; 
+    display: block;
+    margin: auto;
+
 }
 
 input:focus, textarea:focus {
