--- a/style.css
+++ b/style.css
@@ -37,68 +37,38 @@ header {
     color: white;
 }
 
+.nav-links {
+    display: none;
+    flex-direction: column;
+    background-color: #600;
+    position: absolute;
+    width: 100%;
+    top: 60px;
+    left: 0;
+    padding: 10px;
+}
+
+.nav-links.show {
+    display: flex;
+}
+
 .menu-toggle {
     display: none;
-    font-size: 24px;
     background: none;
     border: none;
-    color: white;
-    cursor: pointer;
-}
-nav ul {
-    list-style: none;
-    display: flex;
-    padding: 0;
-    margin: 0;
-}
-
-nav ul li {
-    margin: 0 5px;
-}
-
-nav ul li a {
-    display: block;
-    padding: 10px 20px;
-    background: #D2B48C;
-    color: maroon;
-    font-weight: bold;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background 0.3s;
-}
-
-nav ul li a:hover {
-    background: #A52A2A;
+    font-size: 24px;
     color: white;
 }
+
 @media (max-width: 768px) {
-    nav ul {
+    .nav-links {
         display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 50px;
-        left: 0;
-        width: 100%;
-        background-color: maroon;
-        padding: 10px;
-        z-index: 1000; 
     }
+    .menu-toggle {
+        display: block;
+    }
+}
 
-    nav ul.show {
-    display: flex !important;
-    flex-direction: column;
-    position: absolute;
-    top: 60px; /* Sesuaikan dengan tinggi navbar */
-    left: 0;
-    width: 100%;
-    background: maroon;
-    padding: 10px 0;
-}
-    nav ul li {
-        text-align: center;
-        margin: 5px 0;
-    }
-}
 h2 {
     color: #731210; 
     text-align: center;
