--- a/style.css
+++ b/style.css
@@ -37,35 +37,65 @@ header {
     color: white;
 }
 
-.nav-links {
-    display: none;
-    flex-direction: column;
-    background-color: #600;
-    position: absolute;
-    width: 100%;
-    top: 60px;
-    left: 0;
-    padding: 10px;
-}
-
-.nav-links.show {
-    display: flex;
-}
-
+/* Sembunyikan tombol menu di layar besar */
 .menu-toggle {
     display: none;
+    font-size: 24px;
     background: none;
     border: none;
-    font-size: 24px;
+    color: white;
+    cursor: pointer;
+}
+
+/* Navbar default untuk layar besar */
+nav ul {
+    list-style: none;
+    display: flex;
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li {
+    margin: 0 5px;
+}
+
+nav ul li a {
+    display: block;
+    padding: 10px 20px;
+    background: #D2B48C;
+    color: maroon;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background 0.3s;
+}
+
+nav ul li a:hover {
+    background: #A52A2A;
     color: white;
 }
 
+/* Media query: Saat layar kecil (HP) */
 @media (max-width: 768px) {
-    .nav-links {
+    nav ul {
         display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 100%;
+        background-color: maroon;
+        padding: 10px;
+        z-index: 1000; /* Tambahkan agar tidak tertutup elemen lain */
     }
-    .menu-toggle {
-        display: block;
+
+    nav ul.show {
+        display: flex; /* Munculkan menu saat tombol ditekan */
+    }
+
+    nav ul li {
+        text-align: center;
+        margin: 5px 0;
     }
 }
 
