--- a/style.css
+++ b/style.css
@@ -374,3 +374,39 @@ footer {
     text-align: center;
     width: 100%;
 }
+.navbar {
+  padding: 10px;
+}
+
+.navbar-brand {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.navbar-toggler {
+  border: none;
+}
+
+.offcanvas {
+  width: 250px; /* Lebar sidebar */
+}
+
+.offcanvas-body {
+  padding: 20px;
+}
+
+.navbar-nav .nav-item {
+  margin-bottom: 10px;
+}
+
+.navbar-nav .nav-link {
+  font-size: 16px;
+  color: white;
+  padding: 10px;
+}
+
+.navbar-nav .nav-link:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+}
+
